# aws-cloudops-agent

./: .env.example  README.md  agent_cli.py  agent_fastapi.py  aws_cloudops_agent.py  cloudformation-template.yaml  deploy-lambda-simple.ps1  deploy-lambda.ps1  deploy-lambda.sh  deploy-to-lambda-fixed.ps1  deploy-to-lambda.ps1  dockerfile  lambda_handler.py  lambda_handler_minimal.py  lambda_handler_simple.py  main.py  package-lambda-fixed.ps1  package-lambda.ps1  pyproject.toml  requirements-lambda-minimal.txt  requirements-lambda-ultra-minimal.txt  requirements-lambda.txt  requirements.txt  run_agent.py  test-lambda.py  test-output.json  test-payload.json
docs/: ROADMAP.md  aws-strands-agent.drawio  ~$AWS-CloudOps-Agent.pptx
inf/: deploy.sh  dynamodb-rag.yaml  lambda-infrastructure.yaml
src/: aws_cloudops_agent.py  lambda_aws_cloudops_agent.py  minimal_lambda_aws_cloudops_agent.py  rag_system.py
