[project]
name = "awscloudopsagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.35",
    "numpy>=2.3.3",
    "rich>=14.1.0",
    "sentence-transformers>=5.1.1",
    "strands-agents>=1.9.1",
    "strands-agents-tools>=0.2.8",
]
